<resources>
    <string name="app_name">BigOne Cheater</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="btn_new_fb">New Facebook</string>
    <string name="btn_show_bubble">Show Bubble</string>
    <string name="btn_new_bigone">New BigOne</string>
    <string name="toast_err_root">Error! Cannot get root access.</string>
    <string name="toast_err_launch">Error! Cannot launch this app.</string>
    <string name="btn_new_device">New Device</string>
    <string name="btn_prev_fid">Previous Fid</string>
    <string name="btn_next_fid">Next Fid</string>
    <string name="tv_fb_id">Facebook ID:\u0020</string>
    <string name="tv_fb_pass">Password:\u0020</string>
    <string name="btn_install">Install</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="btn_show_tools">Show Tools</string>
    <string name="toast_installed">Installed!</string>
    <string name="toast_uninstalled">Uninstalled!</string>
    <string name="toast_new_device">New Device!</string>
    <string name="toast_installing">Installing...</string>
</resources>
